@@ -1,3 +1,7 @@
+2007-02-11 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
+
+	* src/components/ogre/model/AnimationSet.cpp: Ogre throws an assert if an animation with zero length is activated, so don't allow that. 
+
 2007-02-10 Erik Hjortsberg  <erik.hjortsberg@iteam.se>
 
 	* src/components/ogre/EmberOgre.cpp: added a little bit more informative exception message
